End flex, with bugs

--- a/index.html
+++ b/index.html
@@ -276,14 +276,14 @@
                     <ul class="newcomer-list">
                         <li class="newcomer-item">
                             <div class="card-title-content">
-                            <svg width="64" height="64">
-                                <use href="./images/icons-sprite.svg#zeplin"></use>
-                            </svg>
-                            <h3 class="card-title">Zeplin</h3>
-                            <p class="card-price">Free & Paid</p>
+                                <svg width="64" height="64">
+                                    <use href="./images/icons-sprite.svg#zeplin"></use>
+                                </svg>
+                                <h3 class="card-title">Zeplin</h3>
+                                <p class="card-price">Free & Paid</p>
                             </div>
                             <p class="card-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                            <ul class="card-actions">
+                            <ul class="card-actions-newcomer">
                                 <li class="action-icon">
                                     <svg width="28" height="28">
                                         <use href="./images/icons-sprite.svg#heart"></use>
@@ -299,14 +299,14 @@
                         </li>
                         <li class="newcomer-item">
                             <div class="card-title-content">
-                            <svg width="64" height="64">
-                                <use href="./images/icons-sprite.svg#phpstorm"></use>
-                            </svg>
-                            <h3 class="card-title">PHPStorm</h3>
-                            <p class="card-price">Free</p>
+                                <svg width="64" height="64">
+                                    <use href="./images/icons-sprite.svg#phpstorm"></use>
+                                </svg>
+                                <h3 class="card-title">PHPStorm</h3>
+                                <p class="card-price">Free</p>
                             </div>
                             <p class="card-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                            <ul class="card-actions">
+                            <ul class="card-actions-newcomer">
                                 <li class="action-icon">
                                     <svg width="28" height="28">
                                         <use href="./images/icons-sprite.svg#heart"></use>
@@ -322,14 +322,14 @@
                         </li>
                         <li class="newcomer-item">
                             <div class="card-title-content">
-                            <svg width="64" height="64">
-                                <use href="./images/icons-sprite.svg#toolbox"></use>
-                            </svg>
-                            <h3 class="card-title">Toolbox</h3>
-                            <p class="card-price">Free</p>
+                                <svg width="64" height="64">
+                                    <use href="./images/icons-sprite.svg#toolbox"></use>
+                                </svg>
+                                <h3 class="card-title">Toolbox</h3>
+                                <p class="card-price">Free</p>
                             </div>
                             <p class="card-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                            <ul class="card-actions">
+                            <ul class="card-actions-newcomer">
                                 <li class="action-icon">
                                     <svg width="28" height="28">
                                         <use href="./images/icons-sprite.svg#heart"></use>
@@ -345,14 +345,14 @@
                         </li>
                         <li class="newcomer-item">
                             <div class="card-title-content">
-                            <svg width="64" height="64">
-                                <use href="./images/icons-sprite.svg#procreate"></use>
-                            </svg>
-                            <h3 class="card-title">Procreate</h3>
-                            <p class="card-price">Paid</p>
+                                <svg width="64" height="64">
+                                    <use href="./images/icons-sprite.svg#procreate"></use>
+                                </svg>
+                                <h3 class="card-title">Procreate</h3>
+                                <p class="card-price">Paid</p>
                             </div>
                             <p class="card-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                            <ul class="card-actions">
+                            <ul class="card-actions-newcomer">
                                 <li class="action-icon">
                                     <svg width="28" height="28">
                                         <use href="./images/icons-sprite.svg#heart"></use>
@@ -372,32 +372,34 @@
         </section>
         <section class="our-team">
             <div class="container">
-                <button class="slider-button">
-                    <svg width="48" height="48">
-                        <use href="./images/icons-sprite.svg#team-arrow"></use>
-                    </svg>
-                </button>
-                <img class="our-team-img" src="./images/ronald-richards.png" alt="Ronald Richards">
-                <ul class="our-team-list">
-                    <li class="our-team-item">
-                        <h3 class="our-team-name">Ronald Richards</h3>
-                    </li>
-                    <li class="our-team-item">
-                        <p class="our-team-job">Product Manager</p>
-                    </li>
-                </ul>
-                <p class="our-team-description">
-                    Incididunt cillum do sint sint enim ullamco id deserunt mollit qui reprehenderit do.
-                    Velit ex tempor cillum ad sint occaecat. Do nulla velit labore occaecat do deserunt
-                    Lorem magna officia incididunt consectetur amet. Sunt consectetur veniam minim ex commodo
-                    sint non. Occaecat aute officia excepteur non laboris id qui ad.
-                </p>
-                <button class="slider-button">
-                    <svg width="48" height="48">
-                        <use href="./images/icons-sprite.svg#team-arrow-active"></use>
-                    </svg>
-                </button>
-                <svg width="168" height="8">
+                <div class="slider-container">
+                    <button class="slider-button">
+                        <svg width="48" height="48">
+                            <use href="./images/icons-sprite.svg#team-arrow"></use>
+                        </svg>
+                    </button>
+                    <img class="our-team-img" src="./images/ronald-richards.png" alt="Ronald Richards">
+                    <ul class="our-team-list">
+                        <li class="our-team-item">
+                            <h3 class="our-team-name">Ronald Richards</h3>
+                        </li>
+                        <li class="our-team-item">
+                            <p class="our-team-job">Product Manager</p>
+                        </li>
+                    </ul>
+                    <p class="our-team-description">
+                        Incididunt cillum do sint sint enim ullamco id deserunt mollit qui reprehenderit do.
+                        Velit ex tempor cillum ad sint occaecat. Do nulla velit labore occaecat do deserunt
+                        Lorem magna officia incididunt consectetur amet. Sunt consectetur veniam minim ex commodo
+                        sint non. Occaecat aute officia excepteur non laboris id qui ad.
+                    </p>
+                    <button class="slider-button-right">
+                        <svg width="48" height="48">
+                            <use href="./images/icons-sprite.svg#team-arrow-active"></use>
+                        </svg>
+                    </button>
+                </div>
+                <svg class="slider-nav" width="168" height="8">
                     <use href="./images/icons-sprite.svg#slider"></use>
                 </svg>
             </div>
@@ -405,9 +407,10 @@
         <section class="contributor">
             <div class="container">
                 <div class="contributor-title-content">
-                <h2 class="section-title">Become a contributor?</h2>
-                <p class="section-description">Join us and get tips & tricks to become a great Designer and Developer
-                </p>
+                    <h2 class="section-title">Become a contributor?</h2>
+                    <p class="section-description">Join us and get tips & tricks to become a great Designer and
+                        Developer
+                    </p>
                 </div>
                 <form class="contributor-form">
                     <input class="input" type="text" placeholder="Enter your email...">
@@ -417,16 +420,18 @@
         </section>
     </main>
     <footer class="footer">
-        <div class="container">
-            <a class="logo" href="#">
-                <svg width="38" height="38">
-                    <use href="./images/icons-sprite.svg#footer-logo"></use>
-                </svg>
-                antools.
-            </a>
-            <p class="footer-copyright">Copyright 2021. Antools</p>
-            <p class="footer-description">Antool is a web collection of information on paid or free Design and
-                Development tools</p>
+        <div class="container flex">
+            <div class="footer-title-content">
+                <a class="logo footer-logo" href="#">
+                    <svg class="logo-svg" width="38" height="38">
+                        <use href="./images/icons-sprite.svg#footer-logo"></use>
+                    </svg>
+                    <span class="logo-span">antools.</span>
+                </a>
+                <p class="footer-copyright">Copyright 2021. Antools</p>
+                <p class="footer-description">Antool is a web collection of information on paid or free Design and
+                    Development tools</p>
+            </div>
             <address class="address">
                 <ul class="address-list">
                     <li class="address-item">
