--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
     </header>
     <main class="main">
         <section class="hero">
-            <div class="container overlay">
+            <div class="overlay">
+            <div class="container">
                 <div class="hero-content">
                     <h1 class="hero-title">Awesome tools for Designer & Developer<span class="last-letter">.</span></h1>
                     <p class="hero-description">Antool is a web collection of information on paid or free Design and
@@ -84,6 +85,7 @@
                     </li>
                 </ul>
             </div>
+            </div>
         </section>
         <section class="popular-tools">
             <div class="container">
@@ -103,6 +105,7 @@
                             <p class="card-price">Free</p>
                         </div>
                         <p class="card-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <div class="action-content">
                         <ul class="card-actions">
                             <li class="action-icon">
                                 <svg width="28" height="28">
@@ -116,6 +119,7 @@
                             </li>
                         </ul>
                         <a class="card-link" href="#">Visit</a>
+                        </div>
                     </li>
                     <li class="card-item">
                         <div class="card-title-content">
@@ -126,6 +130,7 @@
                             <p class="card-price">Trial & Paid</p>
                         </div>
                         <p class="card-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <div class="action-content">
                         <ul class="card-actions">
                             <li class="action-icon">
                                 <svg width="28" height="28">
@@ -139,6 +144,7 @@
                             </li>
                         </ul>
                         <a class="card-link" href="#">Visit</a>
+                        </div>
                     </li>
                     <li class="card-item">
                         <div class="card-title-content">
@@ -149,6 +155,7 @@
                             <p class="card-price">Free</p>
                         </div>
                         <p class="card-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <div class="action-content">
                         <ul class="card-actions">
                             <li class="action-icon">
                                 <svg width="28" height="28">
@@ -162,6 +169,7 @@
                             </li>
                         </ul>
                         <a class="card-link" href="#">Visit</a>
+                        </div>
                     </li>
                     <li class="card-item">
                         <div class="card-title-content">
@@ -172,6 +180,7 @@
                             <p class="card-price">Free & Paid</p>
                         </div>
                         <p class="card-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <div class="action-content">
                         <ul class="card-actions">
                             <li class="action-icon">
                                 <svg width="28" height="28">
@@ -185,6 +194,7 @@
                             </li>
                         </ul>
                         <a class="card-link" href="#">Visit</a>
+                        </div>
                     </li>
                     <li class="card-item">
                         <div class="card-title-content">
@@ -195,6 +205,7 @@
                             <p class="card-price">Free & Paid</p>
                         </div>
                         <p class="card-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <div class="action-content">
                         <ul class="card-actions">
                             <li class="action-icon">
                                 <svg width="28" height="28">
@@ -208,6 +219,7 @@
                             </li>
                         </ul>
                         <a class="card-link" href="#">Visit</a>
+                        </div>
                     </li>
                     <li class="card-item">
                         <div class="card-title-content">
@@ -218,6 +230,7 @@
                             <p class="card-price">Free & Paid</p>
                         </div>
                         <p class="card-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <div class="action-content">
                         <ul class="card-actions">
                             <li class="action-icon">
                                 <svg width="28" height="28">
@@ -231,6 +244,7 @@
                             </li>
                         </ul>
                         <a class="card-link" href="#">Visit</a>
+                        </div>
                     </li>
                 </ul>
                 <button class="popular-tools-button">Load more</button>
@@ -283,6 +297,7 @@
                                 <p class="card-price">Free & Paid</p>
                             </div>
                             <p class="card-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                            <div class="action-content">
                             <ul class="card-actions-newcomer">
                                 <li class="action-icon">
                                     <svg width="28" height="28">
@@ -296,6 +311,7 @@
                                 </li>
                             </ul>
                             <a class="card-link" href="#">Visit</a>
+                            </div>
                         </li>
                         <li class="newcomer-item">
                             <div class="card-title-content">
@@ -306,6 +322,7 @@
                                 <p class="card-price">Free</p>
                             </div>
                             <p class="card-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                            <div class="action-content">
                             <ul class="card-actions-newcomer">
                                 <li class="action-icon">
                                     <svg width="28" height="28">
@@ -319,6 +336,7 @@
                                 </li>
                             </ul>
                             <a class="card-link" href="#">Visit</a>
+                            </div>
                         </li>
                         <li class="newcomer-item">
                             <div class="card-title-content">
@@ -329,6 +347,7 @@
                                 <p class="card-price">Free</p>
                             </div>
                             <p class="card-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                            <div class="action-content">
                             <ul class="card-actions-newcomer">
                                 <li class="action-icon">
                                     <svg width="28" height="28">
@@ -342,6 +361,7 @@
                                 </li>
                             </ul>
                             <a class="card-link" href="#">Visit</a>
+                            </div>
                         </li>
                         <li class="newcomer-item">
                             <div class="card-title-content">
@@ -352,6 +372,7 @@
                                 <p class="card-price">Paid</p>
                             </div>
                             <p class="card-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                            <div class="action-content">
                             <ul class="card-actions-newcomer">
                                 <li class="action-icon">
                                     <svg width="28" height="28">
@@ -365,6 +386,7 @@
                                 </li>
                             </ul>
                             <a class="card-link" href="#">Visit</a>
+                            </div>
                         </li>
                     </ul>
                 </div>
@@ -422,7 +444,7 @@
     <footer class="footer">
         <div class="container flex">
             <div class="footer-title-content">
-                <a class="logo footer-logo" href="#">
+                <a class="footer-logo" href="#">
                     <svg class="logo-svg" width="38" height="38">
                         <use href="./images/icons-sprite.svg#footer-logo"></use>
                     </svg>
