--- a/index.html
+++ b/index.html
@@ -251,6 +251,7 @@
             </div>
         </section>
         <section class="trusted">
+            <div class="overlay-gradient"></div>
             <div class="container trusted-container">
                 <h2 class="trusted-title">Trusted more than 150+ brand</h2>
                 <ul class="trusted-list">
@@ -402,6 +403,7 @@
                     </button>
                     <img class="our-team-img" src="./images/ronald-richards.png" alt="Ronald Richards">
                     <ul class="our-team-list">
+                        <!-- <li><div class="overlay-slider-gradient"></div></li> -->
                         <li class="our-team-item">
                             <h3 class="our-team-name">Ronald Richards</h3>
                         </li>
