--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </nav>
             <ul class="auth-list">
                 <li class="auth-item"><a class="auth-link" href="#">Login</a></li>
-                <li class="auth-item"><a class="auth-link" href="#">Sign Up</a></li>
+                <li class="auth-item"><a class="auth-button" href="#">Sign Up</a></li>
             </ul>
         </div>
     </header>
