--- a/index.html
+++ b/index.html
@@ -275,6 +275,27 @@
                                 <use href="./images/icons-sprite.svg#wordpress"></use>
                             </svg>
                         </a></li>
+                    <!-- ----------- -->
+                    <li class="trusted-item"><a class="trusted-link" href="#">
+                            <svg width="193" height="42">
+                                <use href="./images/icons-sprite.svg#microsoft"></use>
+                            </svg>
+                        </a></li>
+                    <li class="trusted-item"><a class="trusted-link" href="#">
+                            <svg width="157" height="51">
+                                <use href="./images/icons-sprite.svg#google"></use>
+                            </svg>
+                        </a></li>
+                    <li class="trusted-item"><a class="trusted-link" href="#">
+                            <svg width="194" height="49">
+                                <use href="./images/icons-sprite.svg#textslack"></use>
+                            </svg>
+                        </a></li>
+                    <li class="trusted-item"><a class="trusted-link" href="#">
+                            <svg width="194" height="44">
+                                <use href="./images/icons-sprite.svg#wordpress"></use>
+                            </svg>
+                        </a></li>
                 </ul>
             </div>
         </section>
