--- a/index.html
+++ b/index.html
@@ -36,11 +36,12 @@
             <nav class="nav">
                 <ul class="nav-list">
                     <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-                    <li class="nav-item flex-link">
-                        <a class="nav-link" href="#">Categories</a>
+                    <li class="nav-item">
+                        <a class="nav-link flex-link" href="#">Categories
                         <svg class="header-arrow" width="18" height="18">
                                 <use href="./images/icons-sprite.svg#header-arrow"></use>
                         </svg>
+                        </a>
                     </li>
                     <li class="nav-item"><a class="nav-link" href="#">My Collections</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Blog</a></li>
