--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
                         Development
                         tools</p>
                     <form class="hero-form">
+                        <svg width="25" height="24">
+                                <use href="./images/icons-sprite.svg#magnifier"></use>
+                        </svg>
                         <input class="input" type="text" placeholder="find more than 430+ tools...">
                         <button class="button" type="submit">Search</button>
                     </form>
